Added journey state to SailDTO and JourneyDTO and fixed foreign key constraint bug